<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fishnetter TicTacToe</string>
    <string name="menuTitle">Welcome to &lt;gamename&gt;</string>
    <string name="headsup">Heads Up (local game)</string>
    <string name="setSettings">Choose game options!</string>
    <string name="gameWidth">squares wide</string>
    <string name="gameHeight">squares high</string>
    <string name="gameVictory">squares to win</string>
    <string name="playerCount">human players</string>
    <string name="start">Start game!</string>
    <string name="newGame">New game</string>
    <string name="currentPlayer">Current player:</string>
    <string name="backToMenu">Leave game</string>
    <string name="hostGame">Host internet game</string>
    <string name="joinGame">Join internet game</string>
    <string name="waitingPlayers">Waiting for players to connect...</string>
    <string name="name">Name:</string>
    <string name="ip">IP:</string>
    <string name="join">Join!</string>
    <string name="back">Back</string>
    <string name="drop">Drop</string>
    <string name="normal">Normal</string>
    <string name="gameMode">Game mode:</string>
    <string name="aiplayerCount">ai players</string>
</resources>
